--- a/community/yaml_previews/automations.yaml.html
+++ b/community/yaml_previews/automations.yaml.html
@@ -3866,6 +3866,22 @@
     data: {}
     action: input_boolean.turn_off
   mode: single
+- id: &#x27;1748353050913&#x27;
+  alias: Enable Payslip Email Checking
+  description: &#x27;&#x27;
+  triggers:
+  - at: 08:00:00
+    trigger: time
+  conditions:
+  - condition: template
+    value_template: &#x27;{{ (states(&#x27;&#x27;input_datetime.next_pay_day&#x27;&#x27;) | as_datetime).date()
+      - now().date() == timedelta(days=1) }}
+
+      &#x27;
+  actions:
+  - target:
+      entity_id: input_boolean.check_payslip_email
+    action: input_boolean.turn_on
 </pre>
             </div>
             <script>
