--- a/community/yaml_previews/automations.yaml.html
+++ b/community/yaml_previews/automations.yaml.html
@@ -3870,7 +3870,7 @@
   alias: Enable Payslip Email Checking
   description: &#x27;&#x27;
   triggers:
-  - at: 08:00:00
+  - at: 03:00:00
     trigger: time
   conditions:
   - condition: template
@@ -3882,6 +3882,22 @@
   - target:
       entity_id: input_boolean.check_payslip_email
     action: input_boolean.turn_on
+    data: {}
+- id: &#x27;1748353073218&#x27;
+  alias: Disable Payslip Email Checking
+  triggers:
+  - at: 03:00:00
+    trigger: time
+  conditions:
+  - condition: template
+    value_template: &#x27;{{ now().date() - (states(&#x27;&#x27;input_datetime.next_pay_day&#x27;&#x27;) |
+      as_datetime).date() == timedelta(days=1) }}
+
+      &#x27;
+  actions:
+  - target:
+      entity_id: input_boolean.check_payslip_email
+    action: input_boolean.turn_off
 </pre>
             </div>
             <script>
