--- a/community/yaml_previews/automations.yaml.html
+++ b/community/yaml_previews/automations.yaml.html
@@ -2244,33 +2244,23 @@
     default: []
   mode: single
 - id: &#x27;1715822596053&#x27;
-  alias: Pay Day Notification
-  trigger:
-  - trigger: template
-    value_template: &#x27;{{ (states(&#x27;&#x27;input_datetime.next_pay_day&#x27;&#x27;) | as_datetime).date()
-      == now().date() and now().time().hour == 8 and now().time().minute == 0 }}
-
-      &#x27;
-  action:
-  - action: notify.notifications
-    data:
-      title: Pay Day
-      message: Today is pay day! Click to view your payslip.
+  alias: Notify on Payslip Email Detection
+  triggers:
+  - entity_id: sensor.payslip_email
+    to: New payslip received
+    trigger: state
+  conditions:
+  - condition: state
+    entity_id: input_boolean.check_payslip_email
+    state: &#x27;on&#x27;
+  actions:
+  - data:
+      title: &quot;\U0001F4E9 Payslip Received&quot;
+      message: Your payslip email has arrived.
       data:
-        clickAction: https://osc.vistra.com/hr/Employees.html#/payslips
+        clickAction: https://mail.google.com/mail/u/0/#inbox
         notification_icon: mdi:currency-eur
-  - action: input_datetime.set_datetime
-    data:
-      entity_id: input_datetime.last_day_of_month
-      date: &#x27;{% set today = now() %} {% set next_month = (today.month % 12) + 1 %}
-        {% set year = today.year if next_month &gt; 1 else today.year + 1 %} {% set first_day_next_month
-        = strptime(year ~ &#x27;&#x27;-&#x27;&#x27; ~ next_month ~ &#x27;&#x27;-01&#x27;&#x27;, &#x27;&#x27;%Y-%m-%d&#x27;&#x27;) %} {% set first_day_after_next_month
-        = first_day_next_month + timedelta(days=31) %} {% set last_day_next_month
-        = first_day_after_next_month.replace(day=1) - timedelta(days=1) %} {{ last_day_next_month.strftime(&#x27;&#x27;%Y-%m-%d&#x27;&#x27;)
-        }}
-
-        &#x27;
-  mode: single
+    action: notify.notifications
 - id: &#x27;1715936038206&#x27;
   alias: Alarm Snooze
   description: Snoozes the alarm when the &quot;Snooze Alarm&quot; button is pressed, but only
