--- a/community/yaml_previews/automations.yaml.html
+++ b/community/yaml_previews/automations.yaml.html
@@ -2258,7 +2258,7 @@
       title: &quot;\U0001F4E9 Payslip Received&quot;
       message: Your payslip email has arrived.
       data:
-        clickAction: https://mail.google.com/mail/u/0/#inbox
+        clickAction: googlegmail://
         notification_icon: mdi:currency-eur
     action: notify.notifications
   - data:
