--- a/community/yaml_previews/automations.yaml.html
+++ b/community/yaml_previews/automations.yaml.html
@@ -3898,6 +3898,18 @@
   - target:
       entity_id: input_boolean.check_payslip_email
     action: input_boolean.turn_off
+- id: &#x27;1748355187479&#x27;
+  alias: Auto Calculate Last Day of Month
+  description: &#x27;&#x27;
+  triggers:
+  - at: 00:05:00
+    trigger: time
+  conditions:
+  - condition: template
+    value_template: &#x27;{{ now().day == 1 }}&#x27;
+  actions:
+  - action: script.calculate_last_day_of_month
+  mode: single
 </pre>
             </div>
             <script>
