--- a/community/yaml_previews/automations.yaml.html
+++ b/community/yaml_previews/automations.yaml.html
@@ -2260,26 +2260,18 @@
       data:
         notification_icon: mdi:currency-eur
     action: notify.notifications
-  - data:
-      date: &#x27;{% set today = now().date() %}
-
-        {% set month_after_next = today.month + 2 if today.month &lt; 11 else (today.month
-        + 2) % 12 %}
-
-        {% set year = today.year if today.month &lt; 11 else today.year + 1 %}
-
-        {% set first_of_month_after_next = strptime(year ~ &#x27;&#x27;-&#x27;&#x27; ~ month_after_next
-        ~ &#x27;&#x27;-01&#x27;&#x27;, &#x27;&#x27;%Y-%m-%d&#x27;&#x27;) %}
-
-        {% set last_day_next_month = first_of_month_after_next - timedelta(days=1)
-        %}
-
-        {{ last_day_next_month.strftime(&#x27;&#x27;%Y-%m-%d&#x27;&#x27;) }}
+  - target:
+      entity_id: input_datetime.last_day_of_month
+    data:
+      date: &#x27;{% set today = now() %} {% set next_month = (today.month % 12) + 1 %}
+        {% set year = today.year if next_month &gt; 1 else today.year + 1 %} {% set first_day_next_month
+        = strptime(year ~ &#x27;&#x27;-&#x27;&#x27; ~ next_month ~ &#x27;&#x27;-01&#x27;&#x27;, &#x27;&#x27;%Y-%m-%d&#x27;&#x27;) %} {% set first_day_after_next_month
+        = first_day_next_month + timedelta(days=31) %} {% set last_day_next_month
+        = first_day_after_next_month.replace(day=1) - timedelta(days=1) %} {{ last_day_next_month.strftime(&#x27;&#x27;%Y-%m-%d&#x27;&#x27;)
+        }}
 
         &#x27;
     action: input_datetime.set_datetime
-    target:
-      entity_id: input_datetime.last_day_of_month
   mode: single
 - id: &#x27;1715936038206&#x27;
   alias: Alarm Snooze
