--- a/community/yaml_previews/automations.yaml.html
+++ b/community/yaml_previews/automations.yaml.html
@@ -2259,6 +2259,9 @@
       message: Your payslip email has arrived.
       data:
         notification_icon: mdi:currency-eur
+        tag: payslip_notification
+        clickAction: &#x27;&#x27;
+        sticky: false
     action: notify.notifications
   - target:
       entity_id: input_datetime.last_day_of_month
