--- a/community/yaml_previews/automations.yaml.html
+++ b/community/yaml_previews/automations.yaml.html
@@ -2260,8 +2260,7 @@
       data:
         notification_icon: mdi:currency-eur
         tag: payslip_notification
-        clickAction: &#x27;&#x27;
-        sticky: false
+        clickAction: https://mail.google.com/mail/u/0/#inbox
     action: notify.notifications
   - target:
       entity_id: input_datetime.last_day_of_month
